--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                             <input type="submit" value="Sign in" class="sign-btn"/>
 
                             <p class="text">
-                                Forgot your password?
-                                <a href="#">Get help</a> sign in now
+                                
+                                <a href="#">Forgot your password?</a> 
                             </p>
                         </div>         
                    </form>
