--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         </div>
                         <div class="heading">
                             <h2>Welcome Back</h2>
-                            <h6>Not registred yet?</h6>
+                            <h6>Not registered yet?</h6>
                             <a href="#" class="toggle">Sign up</a>
                         </div>
 
