--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>         
                    </form>
 
-                   <!-- <form action="index.html" autocomplete="off" class="sign-up-form">
+                    <form action="index.html" autocomplete="off" class="sign-up-form">
                     <div class="logo">
                         <img src="img/Logo.png" alt="Glow">
                         <h3>Glow</h3>
@@ -113,7 +113,7 @@
                             Agree to the <a href="#">Terms of Services</a> and <a href="#">Privacy Policy</a> instructions
                         </p>
                     </div>         
-               </form> -->
+               </form> 
                 </div>
                         
                   
