--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
                                     minlength="4" 
                                     class="input-field"
                                     autocomplete="off"
-                                    id="name"
                                     required
                                 />
-                                <label for="name">Name</label>
+                                <label>Name</label>
                             </div>
 
                             <div class="input-wrap">
@@ -43,10 +42,9 @@
                                     minlength="4" 
                                     class="input-field"
                                     autocomplete="off"
-                                    id="password"
                                     required
                                 />
-                                <label for="password">Password</label>
+                                <label>Password</label>
                             </div>
 
                             <input type="submit" value="Sign in" class="sign-btn"/>
@@ -77,10 +75,9 @@
                                 minlength="4" 
                                 class="input-field"
                                 autocomplete="off"
-                                id="name"
                                 required
                             />
-                            <label for="name">Name</label>
+                            <label>Name</label>
                         </div>
 
                         <div class="input-wrap">
