--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                     
                 <div class="carousel">
                     <div class="images-wrapper">
-                        <img src="/img/carousel1.png" class="image img-1" alt="" />"
+                        <img src="/img/photo1.webp" class="image img-1" alt="" />"
                         <img src="/img/photo2.webp" class="image img-2" alt="" />"
                         <img src="/img/photo3.webp" class="image img-3" alt="" />"  
                     </div>
@@ -146,7 +146,7 @@
         </div>
     </main>
   
-    <!-- Javascript file-->
+    <!-- Javascript file -->
     <script src="app.js"></script>
 </body>
 </html>
