--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
             <form action="index.html" autocomplete="off" class="sign-up-form">
               <div class="logo">
-                <img src="./img/logo.png" alt="easyclass" />
-                <h4>easyclass</h4>
+                <img src="./img/logo.png" alt="Glow" />
+                <h4>Glow</h4>
               </div>
 
               <div class="heading">
