--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
           <div class="forms-wrap">
             <form action="index.html" autocomplete="off" class="sign-in-form">
               <div class="logo">
-                <img src="./img/logo.png" alt="Glow" />
+                <img src="./img/Logo.png" alt="Glow" />
                 <h4>Glow</h4>
               </div>
 
@@ -59,7 +59,7 @@
 
             <form action="index.html" autocomplete="off" class="sign-up-form">
               <div class="logo">
-                <img src="./img/logo.png" alt="Glow" />
+                <img src="./img/Logo.png" alt="Glow" />
                 <h4>Glow</h4>
               </div>
 
